--- a/debian/changelog
+++ b/debian/changelog
@@ -1,18 +1,10 @@
-ovn (__PF9_OVN_BUILD_VERSION__) unstable; urgency=medium
-
-* Platform9 Systems
-  * ovn-northd: added changes to support l2 only ports
-  * container: added support to build ovn container using custom changes
-
- -- Platform9 Systems <info@platform9.com>  Tue, 16 Dec 2025 22:00:00 -0800
-
-ovn (24.03.2-1) unstable; urgency=low
+OVN (24.03.2-1) unstable; urgency=low
    [ OVN team ]
    * New upstream version
 
  -- OVN team <dev@openvswitch.org>  Thu, 09 May 2024 15:10:30 -0400
 
-ovn (24.03.1-1) unstable; urgency=low
+OVN (24.03.1-1) unstable; urgency=low
    [ OVN team ]
    * New upstream version
 
